--- a/my_project/apps/1-hello-world/assets/style.css
+++ b/my_project/apps/1-hello-world/assets/style.css
@@ -1,28 +1,33 @@
-html, body {
-	overflow: hidden;
-	background-color: #000;		/* black background to blend into screen border in case of mismatching aspect ratio */
-	background-repeat: no-repeat;
-	color: white;
-	text-align: center;
-	margin: 0;
-	padding: 0;
-	user-select: none;
-    touch-action: pan-x pan-y;
-	width: 100%;
-	height: 100%;
+html,
+body {
+  overflow: hidden;
+  background-color: #000; /* black background to blend into screen border in case of mismatching aspect ratio */
+  background-repeat: no-repeat;
+  color: white;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+  user-select: none;
+  touch-action: pan-x pan-y;
+  width: 100%;
+  height: 100%;
 }
 .button {
-    position: absolute;
-	display: inline;
-    height: auto;
-	width: auto;
-	left: 200px;
-	top: 200px;
+  position: absolute;
+  display: inline;
+  height: auto;
+  width: auto;
+  left: 200px;
+  top: 200px;
 }
 .button img {
-    height: 400px;
+  height: 400px;
 }
 .page {
-	opacity: 0;
-	display: none;
+  opacity: 0;
+  display: none;
+}
+
+.calculator-page__output-label {
+  color: orange;
 }
