--- a/my_project/apps/1-hello-world/assets/style.css
+++ b/my_project/apps/1-hello-world/assets/style.css
@@ -1,8 +1,8 @@
 html,
 body {
-  overflow: hidden;
-  background-color: #000; /* black background to blend into screen border in case of mismatching aspect ratio */
-  background-repeat: no-repeat;
+  overflow: scroll;
+  background: rgb(111,137,200);
+  background: linear-gradient(90deg, rgba(111,137,200,1) 0%, rgba(75,129,208,1) 43%, rgba(87,69,252,1) 100%);   background-repeat: no-repeat;
   color: white;
   text-align: center;
   margin: 0;
@@ -18,22 +18,18 @@ body {
   display: none;
 }
 
-.calculator-page__output-label {
-  color: orange;
-}
-
 .pagejs-button {
-  background-color: #ea4c89;
+  background-color: #F9F9F9;
   border-radius: 8px;
   border-style: none;
   box-sizing: border-box;
-  color: #ffffff;
+  color: #1B1B1B;
   cursor: pointer;
   font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   height: 40px;
   list-style: none;
-  margin: 0;
+  margin: 1px 1px 1px 1px;
   outline: none;
   padding: 10px 16px;
 }
