--- a/my_project/apps/1-hello-world/assets/style.css
+++ b/my_project/apps/1-hello-world/assets/style.css
@@ -37,4 +37,18 @@ body {
 .calculator-component{
   width: 300px;
   margin: 0 auto;
+  border: 1px solid #E5E5E5;
+}
+
+.calculator-component__output{
+  background:transparent;
+  border: transparent;
+  resize: none;
+  color: #000000;
+  font-size: 1.5rem;
+  text-align: right;
+  
+}
+.calculator-component__output:empty{
+  display: none;
 }
