--- a/my_project/apps/1-hello-world/assets/style.css
+++ b/my_project/apps/1-hello-world/assets/style.css
@@ -51,12 +51,22 @@ body {
 
   
 }
+
+.calculator-component__output__previous-operand{
+  width: 90%;
+}
+
 .calculator-component__output__previous-operation{
   font-size: 1.4rem;
   color: #333333;
 }
 .calculator-component__output__current-operator{
   text-align: left;
+  width: 10%;
+}
+
+.flex{
+  display: flex;
 }
 
 .grid{
