--- a/my_project/apps/1-hello-world/assets/style.css
+++ b/my_project/apps/1-hello-world/assets/style.css
@@ -1,8 +1,9 @@
 html,
 body {
   overflow: scroll;
-  background: rgb(111,137,200);
-  background: linear-gradient(90deg, rgba(111,137,200,1) 0%, rgba(75,129,208,1) 43%, rgba(87,69,252,1) 100%);   background-repeat: no-repeat;
+  background: rgb(111, 137, 200);
+  background: linear-gradient(90deg, rgba(111, 137, 200, 1) 0%, rgba(75, 129, 208, 1) 43%, rgba(87, 69, 252, 1) 100%);
+  background-repeat: no-repeat;
   color: white;
   text-align: center;
   margin: 0;
@@ -34,48 +35,47 @@ body {
   padding: 10px 16px;
 }
 
-.calculator-component{
+.calculator-component {
   width: 300px;
   margin: 0 auto;
+  border: 1px solid lightblue;
 }
 
-.calculator-component__output{
-  background:transparent;
+.calculator-component__output {
+  background: transparent;
   border: transparent;
   resize: none;
   color: #000000;
   font-size: 1.5rem;
   text-align: right;
   border: 0px solid lightgray;
-    width: 100%;
+  width: 100%;
+  height: 30px;
 
-  
 }
 
-.calculator-component__output__previous-operand{
+.calculator-component__output__previous-operand {
   width: 90%;
 }
 
-.calculator-component__output__previous-operation{
+.calculator-component__output__previous-operation {
   font-size: 1.4rem;
   color: #333333;
 }
-.calculator-component__output__current-operator{
+
+.calculator-component__output__current-operator {
   text-align: left;
   width: 10%;
 }
 
-.flex{
+.flex {
   display: flex;
 }
 
-.grid{
+.grid {
   display: grid;
 }
 
-.grid__1x2{
+.grid__1x2 {
   grid-template-columns: 1fr 1fr;
 }
-
-
-
