--- a/my_project/apps/1-hello-world/assets/style.css
+++ b/my_project/apps/1-hello-world/assets/style.css
@@ -26,9 +26,7 @@ body {
   box-sizing: border-box;
   color: #1B1B1B;
   cursor: pointer;
-  font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  height: 40px;
+  font-family: Consolas, monaco, monospace; 
   list-style: none;
   margin: 1px 1px 1px 1px;
   outline: none;
@@ -37,8 +35,13 @@ body {
 
 .calculator-component {
   margin: 0 auto;
-  border: 1px solid lightblue;
   width: 50vw;
+}
+
+.calculator-component__buttons {
+  border: 2px solid lightgrey;
+  border-radius: 3%;
+  box-shadow: 0px 0px 5px 10px rgba(255, 255, 255, 0.1);
 }
 
 .calculator-component__output {
@@ -48,7 +51,6 @@ body {
   color: #000000;
   font-size: 1.5rem;
   text-align: right;
-  border: 0px solid lightgray;
   width: 100%;
   height: 30px;
 
@@ -75,4 +77,8 @@ body {
 .main-grid {
   display: grid;
   grid-template-columns: 5fr 1fr;
+}
+
+.debug{
+  visibility: hidden;
 }
