--- a/my_project/apps/1-hello-world/assets/style.css
+++ b/my_project/apps/1-hello-world/assets/style.css
@@ -37,6 +37,8 @@ h1{
   margin: 1px 1px 1px 1px;
   padding: 10px 16px;
   text-align: center;
+  border: 2px solid lightblue;
+  border-radius: 8%;
 }
 
 .calculator-component {
@@ -45,7 +47,13 @@ h1{
 }
 
 .calculator-component__buttons {
-  border: 2px solid lightgrey;
+  border: 2px solid lightblue;
+  border-radius: 3%;
+  box-shadow: 0px 0px 5px 10px rgba(255, 255, 255, 0.1);
+}
+
+.calculator-component__outputs{
+    border: 2px solid lightblue;
   border-radius: 3%;
   box-shadow: 0px 0px 5px 10px rgba(255, 255, 255, 0.1);
 }
