--- a/my_project/apps/1-hello-world/assets/style.css
+++ b/my_project/apps/1-hello-world/assets/style.css
@@ -140,13 +140,14 @@ h1{
   position: absolute;
   height: 480px;
   width: 100%;
-  background: #89CFF0;
   border-radius: 50% / 10%;
   color: white;
   text-align: center;
   text-indent: .1em;
   transform: translateY(-4.57in);
   z-index: 1;
+  background-color: #afdcf1;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='126' height='84' viewBox='0 0 126 84'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23bfe5f7' fill-opacity='0.4'%3E%3Cpath d='M126 83v1H0v-2h40V42H0v-2h40V0h2v40h40V0h2v40h40V0h2v83zm-2-1V42H84v40h40zM82 42H42v40h40V42zm-50-6a4 4 0 1 1 0-8 4 4 0 0 1 0 8zM8 12a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm96 12a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm-42 0a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm30-12a4 4 0 1 1 0-8 4 4 0 0 1 0 8zM20 54a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm12 24a4 4 0 1 1 0-8 4 4 0 0 1 0 8zM8 54a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm24 0a4 4 0 1 1 0-8 4 4 0 0 1 0 8zM8 78a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm12 0a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm54 0a4 4 0 1 1 0-8 4 4 0 0 1 0 8zM50 54a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm24 0a4 4 0 1 1 0-8 4 4 0 0 1 0 8zM50 78a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm54-12a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm12 12a4 4 0 1 1 0-8 4 4 0 0 1 0 8zM92 54a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm24 0a4 4 0 1 1 0-8 4 4 0 0 1 0 8zM92 78a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm24-42a4 4 0 1 1 0-8 4 4 0 0 1 0 8z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 }
 
 .calculator-skin__body:before {
@@ -158,9 +159,8 @@ h1{
   left: -5%;
   background: inherit;
   border-radius: 5% / 50%;
+  
 }
-
-
 
 .calculator-skin__body__ears { 
   position: relative;
@@ -190,7 +190,7 @@ h1{
   position: relative;
   width: calc(var(--size) * 0.3);;
   height: calc(var(--size) * 1.2);
-  background: radial-gradient(closest-side, rgba(255,192,203,1) 0%, rgba(255,222,233,1) 100%);;
+  background: radial-gradient(closest-side, rgba(255,192,203,1) 0%, rgba(255,222,233,1) 90%);;
   border-radius: 40px;
   margin: 0 auto;
   margin-top: 1.5vw;
