--- a/my_project/apps/1-hello-world/assets/style.css
+++ b/my_project/apps/1-hello-world/assets/style.css
@@ -120,7 +120,7 @@ h1{
   z-index: -1;
   display: flex;
   justify-content: space-evenly;
-  translate: 30vw -15vw;
+  translate: 28.25vw -10vw;
 }
 
 .calculator-skin__body__buttons_power{
@@ -131,8 +131,8 @@ h1{
 
   position: relative;
   width: calc(var(--size) * 0.5);;
-  height: calc(var(--size) * 1.2);
-  background: red;
+  height: calc(var(--size) * 1.0);
+  background: rgb(255, 117, 117);
   border-radius: 40px;
 }
 
