--- a/my_project/apps/1-hello-world/assets/style.css
+++ b/my_project/apps/1-hello-world/assets/style.css
@@ -1,6 +1,6 @@
 html,
 body {
-  overflow: scroll;
+  overflow: hidden;
   margin: 0;
   padding: 0;
   user-select: none;
@@ -134,6 +134,7 @@ h1{
   height: calc(var(--size) * 1.0);
   background: rgb(255, 117, 117);
   border-radius: 40px;
+  padding: 0px;
 }
 
 .calculator-skin__body {
