--- a/my_project/apps/1-hello-world/assets/style.css
+++ b/my_project/apps/1-hello-world/assets/style.css
@@ -27,7 +27,18 @@ h1{
   text-align: center;
 }
 
-.pagejs-button {
+.quiz-btn{
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+.btn-calculator {
   border-radius: 8px;
   border-style: none;
   box-sizing: border-box;
