--- a/my_project/apps/1-hello-world/assets/style.css
+++ b/my_project/apps/1-hello-world/assets/style.css
@@ -7,6 +7,11 @@ body {
   touch-action: pan-x pan-y;
   width: 100%;
   height: 100%;
+
+
+}
+
+/*
   background-color: #e5e5f7;
   background-image:  
     linear-gradient(rgba(68, 76, 247, 0.2) 2px, transparent 2px),
@@ -15,8 +20,7 @@ body {
     linear-gradient(90deg, rgba(68, 76, 247, 0.2) 1px, rgba(229, 229, 247, 0.2) 1px);
   background-size: 50px 50px, 50px 50px, 10px 10px, 10px 10px;
   background-position: -2px -2px, -2px -2px, -1px -1px, -1px -1px;
-
-}
+*/
 
 .page {
   display: none;
@@ -139,7 +143,7 @@ h1{
   z-index: 0;
 
   /* Modify size here: */
-  --size: 10vw;
+  --size: 100px;
   
   position: relative;
   width: calc(var(--size) * 0.5);
@@ -147,7 +151,9 @@ h1{
   background: rgb(117, 255, 158);
   border-radius: 40px;
   align-self: end;
+  min-width: 22px;
   max-width: 36px;
+  min-height: 34px;
   max-height: 52px;
 }
 
@@ -155,7 +161,7 @@ h1{
   z-index: 0;
 
   /* Modify size here: */
-  --size: 10vw;
+  --size: 100px;
   
   position: relative;
   width: calc(var(--size) * 0.5);;
@@ -163,7 +169,9 @@ h1{
   background: rgb(60, 122, 236);
   border-radius: 40px;
   align-self: end;
+  min-width: 22px;
   max-width: 36px;
+  min-height: 44px;
   max-height: 65px;
 
 }
@@ -207,7 +215,7 @@ h1{
   z-index: 0;
 
   /* Modify size here: */
-  --size: 20vw;
+  --size: 150px;
 
   position: relative;
   width: calc(var(--size) * 0.5);;
@@ -220,7 +228,7 @@ h1{
 
 .calculator-skin__body__ear__inner {
   /* Modify size here: */
-  --size: 20vw;
+  --size: 120px;
 
   position: relative;
   width: calc(var(--size) * 0.3);;
