--- a/my_project/apps/1-hello-world/assets/style.css
+++ b/my_project/apps/1-hello-world/assets/style.css
@@ -7,8 +7,8 @@ body {
   touch-action: pan-x pan-y;
   width: 100%;
   height: 100%;
-
-
+  background-image: url("./backgrounds/ffflux.svg");
+  background-size: cover;
 }
 
 /*
