--- a/my_project/apps/1-hello-world/assets/style.css
+++ b/my_project/apps/1-hello-world/assets/style.css
@@ -7,8 +7,10 @@ body {
   touch-action: pan-x pan-y;
   width: 100%;
   height: 100%;
+
   background-image: url("./backgrounds/ffflux.svg");
   background-size: cover;
+
 }
 
 /*
@@ -239,4 +241,20 @@ h1{
   margin-top: 1.5vw;
   max-height: 160px;
   max-width: 45px;
+}
+
+
+.quiz-component{
+  width: 90%;
+  margin: 0 auto;
+}
+
+.score-component{
+  display: flex;
+  justify-content: flex-end;
+}
+
+.score-component div{
+  padding: 0px 1px 0px 1px;
+  font-size: 1.5rem;
 }
