--- a/my_project/apps/1-hello-world/assets/style.css
+++ b/my_project/apps/1-hello-world/assets/style.css
@@ -228,6 +228,19 @@ h1{
   max-width: 70px;
 }
 
+.start-quiz-btn{
+  color: white;
+  font-size: 6rem;
+  border: 1px solid white;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+
+
 .calculator-skin__body__ear__inner {
   /* Modify size here: */
   --size: 120px;
