--- a/my_project/apps/1-hello-world/assets/style.css
+++ b/my_project/apps/1-hello-world/assets/style.css
@@ -272,6 +272,19 @@ h1{
   font-size: 1.5rem;
 }
 
-.gameover{
+.restart-quiz-btn{
   display: none;
+  margin: 0 auto;
+  color: white;
+  font-size: 6rem;
+  border: 1px solid white;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.quiz-gameover-component{
+  display: flex;
 }
