--- a/my_project/apps/1-hello-world/assets/style.css
+++ b/my_project/apps/1-hello-world/assets/style.css
@@ -334,3 +334,17 @@ h1{
 .countdown-component.gameover{
   display: none;
 }
+
+.progressbar-component{
+  width: 100%;
+  height: 8px;
+  background-color: rgb(0, 255, 0);
+  transition: 
+  width .5s ease-in-out, 
+  background-color .5s ease-in-out;
+
+}
+
+.progressbar-component.gameover{
+  display: none;
+}
