--- a/my_project/apps/1-hello-world/assets/style.css
+++ b/my_project/apps/1-hello-world/assets/style.css
@@ -337,10 +337,12 @@ h1{
 
 .progressbar-component{
   width: 100%;
-  height: 3px;
+  height: 4px;
   transition: 
   width .5s ease-in-out, 
   background-color .5s ease-in-out;
+  display: flex;
+  margin: 0 auto;
 
 }
 
