--- a/my_project/apps/1-hello-world/assets/style.css
+++ b/my_project/apps/1-hello-world/assets/style.css
@@ -279,11 +279,11 @@ h1{
   text-align: center;
 }
 
-.quiz-gameover-component{
+.gameover-component{
   display: none;
 }
 
-.quiz-gameover-component.gameover{
+.gameover-component.gameover{
   display: flex;
 }
 
