--- a/my_project/apps/1-hello-world/assets/style.css
+++ b/my_project/apps/1-hello-world/assets/style.css
@@ -20,11 +20,6 @@ body {
 
 }
 
-/*
-  background-image: url("./backgrounds/ffflux.svg");
-  background-size: cover;
-*/
-
 .page {
   display: none;
   opacity: 0;
@@ -234,10 +229,14 @@ h1{
   max-width: 45px;
 }
 
+h2{
+    color: #5000ff;
+}
+
 .start-quiz-btn{
-  color: white;
+  color: #5000ff;
   font-size: 6rem;
-  border: 1px solid white;
+  border: 1px solid #5000ff;
   position: absolute;
   left: 50%;
   top: 50%;
@@ -255,6 +254,8 @@ h1{
 }
 
 .score-component{
+      color: #5000ff;
+
   display: flex;
   justify-content: flex-end;
 }
@@ -271,9 +272,9 @@ h1{
 
 .end-quiz-btn{
   margin: 0 auto;
-  color: white;
+  color: #5000ff;
   font-size: 6rem;
-  border: 1px solid white;
+  border: 1px solid 5000ff;
   position: absolute;
   left: 50%;
   top: 50%;
@@ -323,6 +324,10 @@ h1{
   display: none !important;
 }
 
+.counter-component{
+  color: #5000ff;
+}
+
 .counter-component.gameover{
   display: none;
 }
@@ -349,6 +354,10 @@ h1{
   display: none;
 }
 
+.countdown-component{
+        color: #5000ff;
+
+}
 .progressbar-component{
   width: 100%;
   height: 4px;
